hphp/test/quick/redeclared_method.php.expectf

Fatal error: Redeclared method C::f in %s on line 6
